Makes use of EngineGeolocationFeature weak_ptr threadsafe.

There was an issue where a weak_ptr to EngineGeolocationFeature
was being invalidated while another thread was accessing it. This
CL corrects this issue.

BUG=644483

Review-Url: https://codereview.chromium.org/2328453003
Cr-Commit-Position: refs/heads/master@{#424029}

Former-commit-id: 4b44beefc9298186e5e1e27d0c2f90244bcbfef6